--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@ select{height:32px}
   <input id="crossSize" type="range" min="1" max="5" value="2">
   <span id="crossSizeVal">2 px</span>
 
+<label for="cameraSelect">Cámara:</label>
+<select id="cameraSelect"></select>
+
   <button id="camBtn" class="control-btn">📷</button>
   <button id="recBtn" class="control-btn">⏺</button>
 <span id="counterDisplay" title="Próximo video"
@@ -243,6 +246,23 @@ resetCounterBtn.onclick = () => {
     }
 };
 
+/* ===== LISTAR CAMARAS DISPONIBLES ===== */
+async function listarCamaras() {
+    const devices = await navigator.mediaDevices.enumerateDevices();
+    const videoDevices = devices.filter(d => d.kind === "videoinput");
+
+    const cameraSelect = document.getElementById("cameraSelect");
+    cameraSelect.innerHTML = "";
+
+    videoDevices.forEach((device, index) => {
+        const option = document.createElement("option");
+        option.value = device.deviceId;
+        option.text = device.label || `Cámara ${index + 1}`;
+        cameraSelect.appendChild(option);
+    });
+}
+listarCamaras(); // Llama a la función al inicio
+
 /* ===== ANALIZADOR EN VIVO ===== */
 let liveCanvas = document.createElement("canvas");
 liveCanvas.width = 96; liveCanvas.height = 54;
@@ -312,25 +332,24 @@ frameBackBtn.onclick    = () => frameStep(-1);
 frameForwardBtn.onclick = () => frameStep(1);
 
 /* ===== WEBCAM ===== */
-/* ===== WEBCAM ===== */
 camBtn.onclick = async () => {
     try {
-        // Si ya hay un stream, lo cerramos
         if (stream) {
             stream.getTracks().forEach(t => t.stop());
             camVideo.srcObject = null;
             stream = null;
-            camBtn.style.background = ""; // Volver al color original
+            camBtn.style.background = "";
             return;
         }
 
-        // Solicita permiso y obtiene la cámara por defecto
-        stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        const selectedCameraId = document.getElementById("cameraSelect").value;
+
+        stream = await navigator.mediaDevices.getUserMedia({ 
+            video: { deviceId: selectedCameraId ? { exact: selectedCameraId } : undefined } 
+        });
         camVideo.srcObject = stream;
 
-        // Cambiar el color del botón a naranja al activarse
         camBtn.style.background = "orange";
-
     } catch (err) {
         alert("No se pudo acceder a la cámara: " + err.message);
         console.error(err);
